--- a/game-of-thrones/src/index.css
+++ b/game-of-thrones/src/index.css
@@ -84,3 +84,50 @@ border-radius: 2rem;
   border: 2px solid #fff;
   color: #fff;
 }
+
+.main {
+  background-color: black;
+}
+
+.projectCard {
+  width: 300px;
+  height: 300px;
+  border-radius: 5px;
+  overflow: hidden;
+  cursor: pointer;
+  border: 1px solid black;
+  margin: 20px auto;
+  color: white;
+  background-color: black;
+}
+
+.projectCard:hover {
+  background-color: white;
+  color: black;
+}
+
+.projectCard img {
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.info {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 15px;
+  text-align: center;
+}
+
+.texts h2 {
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.name {
+  font-size: 14px;
+  font-weight: 300;
+}
