--- a/game-of-thrones/src/index.css
+++ b/game-of-thrones/src/index.css
@@ -131,3 +131,24 @@ border-radius: 2rem;
   font-size: 14px;
   font-weight: 300;
 }
+
+.search {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  height: 100vh;
+  text-align: center;
+  justify-content: center;
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url("./got-2.jpg");
+  opacity: 0.9;
+  object-fit: cover;
+  color: white;
+}
+
+.search-detail {
+  top: 50%;
+  left: 50%;
+  max-height: 60vh;
+  min-width: 60%;
+  margin-bottom: 10px;
+}
